# CF_test-case-parser_and_runner

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmakelists_cleaner.py  fetch_cases.py  getTestCases.py  make.bat  remove_exe.py  run.py  runner.py  template.cpp
