cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 17)
project(cf CXX)
set(CMAKE_BUILD_TYPE Debug)

add_executable(1764A 1764/A.cpp)
add_executable(1758A 1758/A.cpp)
add_executable(1760A 1760/A.cpp)
add_executable(1765N 1765/N.cpp)
add_executable(1765K 1765/K.cpp)
add_executable(489C 489/C.cpp)
add_executable(401C 401/C.cpp)
add_executable(1764B 1764/B.cpp)
add_executable(1764C 1764/C.cpp)
add_executable(1764D 1764/D.cpp)
add_executable(479C 479/C.cpp)
add_executable(455A 455/A.cpp)
